--- a/473.html
+++ b/473.html
@@ -18,6 +18,7 @@
 <body>
     <header>
         <h1>473宿舍官网</h1>
+        <h1>杨志宽</h1>
     </header>
     <main>
         <section>
@@ -26,7 +27,5 @@
             <a href="http://bx.scauzj.edu.cn/public/m_index.html" title="报修" target="_blank"><h2>宿舍报修</h2></a>
         </section>
     </main>
-
-
 </body>
 </html>
